--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "glob": "^7.1.6",
     "intl": "^1.2.5",
     "react": "^17.0.1",
+    "react-adsense": "^0.1.0",
     "react-dom": "^17.0.1",
     "react-image": "^4.0.3",
     "react-intl": "^5.10.4",
