--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.1",
     "react-adsense": "^0.1.0",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-image": "^4.0.3",
     "react-intl": "^5.10.4",
     "react-router-dom": "^5.2.0",
