--- a/package.json
+++ b/package.json
@@ -7,8 +7,15 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
     "accepts": "^1.3.7",
+    "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "glob": "^7.1.6",
+    "http-proxy-middleware": "^1.0.6",
     "intl": "^1.2.5",
+    "mongoose": "^5.11.8",
+    "npm-run-all": "^4.1.5",
     "react": "^17.0.1",
     "react-adsense": "^0.1.0",
     "react-dom": "^17.0.1",
@@ -21,7 +28,9 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm-run-all --parallel start:**",
+    "start:client": "react-scripts start",
+    "start:server": "node ./src/server/app.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
