--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "npm-run-all": "^4.1.5",
     "react": "^17.0.1",
     "react-adsense": "^0.1.0",
+    "react-adsense-google": "^1.2.0",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-image": "^4.0.3",
