--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
     "accepts": "^1.3.7",
+    "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "glob": "^7.1.6",
+    "http-proxy-middleware": "^1.0.6",
     "intl": "^1.2.5",
+    "mongoose": "^5.11.8",
     "react": "^17.0.1",
     "react-adsense": "^0.1.0",
     "react-dom": "^17.0.1",
