--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "accepts": "^1.3.7",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "glob": "^7.1.6",
     "http-proxy-middleware": "^1.0.6",
