--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "glob": "^7.1.6",
     "http-proxy-middleware": "^1.0.6",
     "intl": "^1.2.5",
+    "moment": "^2.29.1",
     "mongoose": "^5.11.8",
     "node-schedule": "^1.3.2",
     "react": "^17.0.1",
