--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react-intl": "^5.10.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "winston": "^3.3.3",
+    "winston-daily-rotate-file": "^4.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
