--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "intl": "^1.2.5",
     "moment": "^2.29.1",
     "mongoose": "^5.11.8",
+    "morgan": "^1.10.0",
     "node-schedule": "^1.3.2",
     "react": "^17.0.1",
     "react-adsense": "^0.1.0",
